# junior-independent-study

./: .gitignore  README.md  annotated_bibliography.tex  bibliography.bib  main.tex  proposal.tex
.github/workflows/: ci.yml  latex.yml
src/: README.md
src/backend/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/backend/app/: __init__.py  __main__.py  config.py  preprocess.py  schema.py  sentiment_service.py
src/backend/tests/: app_test.py  config_test.py  main_test.py  preprocess_test.py  schema_test.py  sentiment_service_test.py
src/frontend/: .env.example  .prettierignore  .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  stylelint.config.mjs  vite.config.ts
src/frontend/.husky/: pre-commit
src/frontend/src/: App.tsx
src/frontend/src/lib/: api.ts
src/frontend/src/tests/: App.test.tsx  api.test.ts  main.test.tsx
